update map object, add working data flow with user

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
             <form>
                 <h2>Détails de la station</h2>
                 <div class="toggle-info">
-                    <label>Nom et adresse de la station: </label><br>
+                    <label>Numéro et nom de la station: </label><br>
                     <input type="text" name="name" id="name" placeholder="Aucune station selectionné" disabled>
+                </div>
+                <div class="toggle-info">
+                    <label>Adresse de la station: </label><br>
+                    <input type="text" name="address" id="address" placeholder="NA" disabled>
                 </div>
                 <div class="toggle-info">
                     <label>Vélos disponible:  </label><br>
