fix little glitch on the chrono, delete useless stuff and add hide on the userInformation

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     </section>
     
-    <section id="user-information" class="hide">
+    <section id="user-information">
         <!--INFO RESERVATION-->
         
         <p><strong>Votre réservation</strong><br>
