rework img size and button

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <img class="slide" id="slide3" src="assets/diapo/diapo3.png">
         </div>
         <div id="carousel-control">
-            <button class="fas fa-arrow-circle-left" onclick="plusDivs(-1)"></button>
-            <button class="fas fa-pause-circle" onclick="pause()"></button>
-            <button class="fas fa-arrow-circle-right" onclick="plusDivs(+1)"></button>
+            <button class="fas fa-arrow-circle-left" onclick="plusDivs(-1)"> Précédant</button>
+            <button class="fas fa-pause-circle" onclick="pause()"> Pause</button>
+            <button class="fas" onclick="plusDivs(+1)"> Suivant <i class="fas fa-arrow-circle-right"></i></button>
         </div>
         
         
