add basic slider animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="Cyclopc">
-    <meta property="og:description" content="Projet d'études, développement d'un site où l'on peut réserver son cycenville pour les différentes stations." />
+    <meta property="og:description" content="Projet d'études, développement d'un site où l'on peut réserver son cyclenville pour les différentes stations." />
     <meta property="og:url" content="https://farm1.staticflickr.com/754/21521006106_ffcc02c995_b.jpg" />
     <meta property="og:image" content="http://www.dax.fr/sites/default/files/images/cadredevie/deplacer/cyclenville.jpg" />
 
@@ -57,7 +57,7 @@
     
     <section id="main">
         <h2>Carte interactive</h2>
-        <p>Réservo votre velib n'a jamais été aussi facile!</p>
+        <p>Réserver votre velib n'a jamais été aussi facile!</p>
         <!--CARTE INTERACTIVE-->
         <div>
             <div id="mapid"></div>
