add small responsive rules

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Custom styles for this template -->
     <link rel="icon" type="image/jpeg" href="assets/bicycle-icon.jpg" />
     <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="style/responsive.css" type="text/css">
     <!--CSS Leaflet-->
      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -81,11 +82,11 @@
                     <input type="text" name="place" id="place" placeholder="0" disabled>
                 </div>
                 <div id="divider"></div>
-                <div class="toggle-info">
+                <div class="toggle-info user">
                     <label>Nom réservation: </label><br>
                     <input type="text" name="reservationName" id="reservationName" required>
                 </div>
-                <div class="toggle-info">
+                <div class="toggle-info user">
                     <label>Prénom réservation: </label><br>
                     <input type="text" name="reservationFirstName" id="reservationFirstName" required>
                 </div>
