fix html id element logic

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2>Détails de la station</h2>
                 <div class="toggle-info">
                     <label>Numéro et nom de la station: </label><br>
-                    <input type="text" name="name" id="name" placeholder="Aucune station selectionné" disabled>
+                    <input type="text" name="nameStation" id="nameStation" placeholder="Aucune station selectionné" disabled>
                 </div>
                 <div class="toggle-info">
                     <label>Adresse de la station: </label><br>
@@ -92,11 +92,11 @@
                 <div id="divider"></div>
                 <div class="toggle-info user">
                     <label>Nom réservation: </label><br>
-                    <input type="text" name="reservationName" id="reservationName" required>
+                    <input type="text" name="name" id="name" required>
                 </div>
                 <div class="toggle-info user">
                     <label>Prénom réservation: </label><br>
-                    <input type="text" name="reservationFirstName" id="reservationFirstName" required>
+                    <input type="text" name="firstname" id="firstname" required>
                 </div>
                 <button id="reserve-btn" class="btn-primary" type="button" onclick="getData()">Réservation</button>
                 <div id="signature-form">
