small fix, add timeline feature, fix user.resetReservation usage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <section id="diaporama">
         <!--DIAPO TUTORIEL-->
         
-        <h2 class="title">Diaporama guide</h2>
+        <h2 class="title">Diaporama guide </h2>
+        <button id="userAccess"><a href="#user-information"><strong>Infos réservation:</strong> <br><strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
         <div id="carousel">
             <figure id="slide_container">
                 <img id="slide" class="diapo" src="assets/diapo/diapo1.png" alt="Image pour le guide d'utilisation">
@@ -110,9 +111,11 @@
         <!--INFO RESERVATION-->
         <h3>Informations sur votre réservation</h3>
         <div id="reservOK">
+            <div id="timeline"><i id="timeline-cursor" class="fas fa-bicycle"></i></div>
             <p><strong>Votre réservation</strong><br>
             Vélo réservé à la station <strong id="stationName"></strong> par <strong id="userName"></strong><br>
             Réservation valide durant encore: <strong id="minute"></strong>min <strong id="seconde"></strong>s</p>
+            
         </div>
         <div id="reservNone">
             <p>Votre réservation a été annulé ou n'est plus valide (temps écoulé supérieur à 20 min).</p>
