--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
 <body>
-    <button id="userAccess"><a id="userAccessBtn" href="#user-information"><strong>Infos réservation</strong> <br>Temps restant:<br><strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
+    <button id="userAccess"><a id="userAccessBtn" href="#user-information"><strong>Cliquez pour plus d'infos</strong> <br>Temps restant: <strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
     <div id="logo-container"><img id="logo" src="assets/Logo_Cyclenville_Grand_Dax.png" alt="logo du projet cyclenville"></div>
     <h1>Bienvenue sur votre page cyclenville !</h1>
     <section id="diaporama">
