Delete useless code/cdn and optimize some img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 <body>
     <button id="userAccess"><a id="userAccessBtn" href="#user-information"><strong>Cliquez pour plus d'infos</strong> <br>Temps restant: <strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
-    <div id="logo-container"><img id="logo" src="assets/Logo_Cyclenville_Grand_Dax.png" alt="logo du projet cyclenville"></div>
+    <div id="logo-container"><img id="logo" src="assets/Logo_Cyclenville_Grand_Dax.jpg" alt="logo du projet cyclenville"></div>
     <h1>Bienvenue sur votre page cyclenville !</h1>
     <section id="diaporama">
         <!--DIAPO TUTORIEL-->
@@ -46,7 +46,7 @@
         
         <div id="carousel">
             <figure id="slide_container">
-                <img id="slide" class="diapo" src="assets/diapo/diapo1.png" alt="Image pour le guide d'utilisation">
+                <img id="slide" class="diapo" src="assets/diapo/diapo1.jpg" alt="Image pour le guide d'utilisation">
                 <figcaption id="description"></figcaption>
             </figure>
         </div>
@@ -130,14 +130,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src=js/jquery-3.3.1.min.js></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
     <!--LEAFLET JS-->
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
    crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.min.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/signature.js"></script>
     <script src="js/map.js"></script>
