--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
     
 <body>
     <button id="userAccess"><a id="userAccessBtn" href="#user-information"><strong>Cliquez pour plus d'infos</strong> <br>Temps restant: <strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
-    <div id="translate">
-        <button onclick="french()"><img src="assets/flags/FRfr.png" alt="Traduction française"></button>
-        <button onclick="english()"><img src="assets/flags/ENen.png" alt="English translate"></button>
-    </div>
     <div id="logo-container"><img id="logo" src="assets/Logo_Cyclenville_Grand_Dax.jpg" alt="logo du projet cyclenville"></div>
     <h1>Bienvenue sur votre page cyclenville !</h1>
     <section id="diaporama">
@@ -122,6 +118,7 @@
                 Vélo réservé à la station <strong id="stationName"></strong> par <strong id="userName"></strong><br>
                 Réservation valide durant encore: <strong id="minute"></strong>min <strong id="seconde"></strong>s</p>
                 <button id="cancelReservation" type="button" onclick="getData()">Annuler Réservation</button>
+                <div><p id="estimationM"></p><p id="estimationS"></p></div>
             </div>
             <div id="reservNone">
                 <p>Votre réservation a été annulé ou n'est plus valide (temps écoulé supérieur à 20 min).</p>
