--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
    crossorigin=""></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/signature.js"></script>
     <script src="js/map.js"></script>
