fix html for w3 rules, replace button and a for userAccess

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
 <body>
-    <button id="userAccess"><a id="userAccessBtn" href="#user-information"><strong>Cliquez pour plus d'infos</strong> <br>Temps restant: <strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</a></button>
+    <a class="button" id="userAccessBtn" href="#user-information"><span id="userAccess"><strong>Cliquez pour plus d'infos</strong> <br>Temps restant: <strong id="minAccess"></strong>min <strong id="scdAccess"></strong>s</span></a>
     <div id="logo-container"><img id="logo" src="assets/Logo_Cyclenville_Grand_Dax.jpg" alt="logo du projet cyclenville"></div>
     <h1>Bienvenue sur votre page cyclenville !</h1>
     <section id="diaporama">
