Rework canvas, reservation, chrono for Object

--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
    crossorigin=""></script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/diaporama.js"></script>
+    <script src="js/buttonAssign.js"></script>
     <script src="js/signature.js"></script>
     <script src="js/map.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/reservation.js"></script>
+    <script src="js/cache.js"></script>
     
 </body>
 </html>
