Rework some code to object, add stations count, add closed stations.. Fix the possibility to reserve with 0 or less cycle for a new reservation

--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
                 </div>
             </form>
         </div>
+        <div id="stationsGlobal">
+            <div>
+                <img class="icon" src="assets/Cycling_Location.png" alt="Available Stations">
+                <p>Il y a <strong id="availableStations"></strong> station(s) disponible</p>
+            </div>
+            <div>
+                <img class="icon" src="assets/Cycling_Location_empty.png" alt="Empty Stations">
+                <p>Il y a <strong id="emptyStations"></strong> station(s) sans vélo disponible</p>
+            </div>
+            <div>
+                <img class="icon" src="assets/Cycling_Location_closed.png" alt="Closed Stations">
+                <p>Il y a <strong id="closedStations"></strong> station(s) fermé</p>
+            </div>
+        </div>
 
     </section>
     
