--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
         <div id="stationsGlobal">
             <div>
                 <img class="icon" src="assets/Cycling_Location.png" alt="Available Stations">
-                <p>Il y a <strong id="availableStations"></strong> station(s) disponible</p>
+                <span>Il y a <strong id="availableStations"></strong> station(s) disponible</span>
             </div>
             <div>
                 <img class="icon" src="assets/Cycling_Location_empty.png" alt="Empty Stations">
-                <p>Il y a <strong id="emptyStations"></strong> station(s) sans vélo disponible</p>
+                <span>Il y a <strong id="emptyStations"></strong> station(s) sans vélo disponible</span>
             </div>
             <div>
                 <img class="icon" src="assets/Cycling_Location_closed.png" alt="Closed Stations">
-                <p>Il y a <strong id="closedStations"></strong> station(s) fermé</p>
+                <span>Il y a <strong id="closedStations"></strong> station(s) fermé</span>
             </div>
         </div>
 
