--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/buttonAssign.js"></script>
+    <script src="js/userInfo.js"></script>
     <script src="js/signature.js"></script>
     <script src="js/map.js"></script>
     <script src="js/ajax.js"></script>
