--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <script src="js/map.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/reservation.js"></script>
+    <script src="js/user.js"></script>
     <script src="js/cache.js"></script>
     
 </body>
